[package]
name = "cull"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast photo culling — pick, reject, export. Writes XMP sidecars for Lightroom."
license = "MIT"

[[bin]]
name = "cull"

[dependencies]
eframe = "0.29"
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
walkdir = "2"
anyhow = "1"
rfd = "0.14"
clap = { version = "4", features = ["derive"] }
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
